@@ -1,3 +1,8 @@
+2007-08-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* nis/nis_table.c (nis_list): Don't fail if __follow_path returned
+	NIS_NOTFOUND.
+
 2007-08-21  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #4566]
